--- a/period.ipynb
+++ b/period.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,9 +86,7 @@
    "source": [
     "file = glob.glob('*.polycos')[0]      # buscamos el archivo .polycos\n",
     "print(file)\n",
-    "f = open(file, \"r\")                   # abrimos el archivo\n",
-    "lines=f.readlines()                   # leemos el número de líneas\n",
-    "lines = 576\n",
+    "lines=sum(1 for line in open(file))   # leemos el número de líneas\n",
     "out = open(\"periods.dat\", \"w+\")       # abrimos el archivo de salida"
    ]
   },
