--- a/period.ipynb
+++ b/period.ipynb
@@ -231,21 +231,20 @@
     }
    ],
    "source": [
-    "n = 0\n",
+    "n = 0               # número de líneas leídas del archivo .polycos\n",
     "while n < lines:    # recorremos todas las líneas del archivo .polycos\n",
     "    \n",
     "    UTC = np.genfromtxt( file, comments=\"none\", dtype=float, skip_header=n, max_rows=1, usecols=(2) )        # Middle point of the time span in UTC\n",
     "    TMID = np.genfromtxt( file, comments=\"none\", dtype=np.float128, skip_header=n, max_rows=1, usecols=(3) ) # Middle point of the time span in MJD\n",
     "    \n",
-    "    F0 = np.genfromtxt( file, comments=\"none\", dtype=float, skip_header=n+1 , max_rows=1, usecols=(1) )     # Reference spin frequency\n",
-    "    span_min = np.genfromtxt( file, comments=\"none\", dtype=float, skip_header=n+1, max_rows=1, usecols=(3)) # Time span in minutes\n",
-    "    span_mjd = span_min * (1./(60.*24.))                                                                # Time span in MJD\n",
+    "    F0 = np.genfromtxt( file, comments=\"none\", dtype=float, skip_header=n+1 , max_rows=1, usecols=(1) )      # Reference spin frequency\n",
+    "    span_min = np.genfromtxt( file, comments=\"none\", dtype=float, skip_header=n+1, max_rows=1, usecols=(3))  # Time span in minutes\n",
+    "    span_mjd = span_min * (1./(60.*24.))                                                                     # Time span in MJD\n",
     "    \n",
-    "    T_inicial = TMID - span_mjd/2.                                                                          # Starting point of the time span in MJD\n",
-    "    print(T_inicial)\n",
+    "    T_inicial = TMID - span_mjd/2.                                                                           # Starting point of the time span in MJD\n",
     "    \n",
-    "    matrix = np.genfromtxt(file, usecols=range(3), dtype=np.float128, skip_header=n+2, max_rows=4)          # Matriz de coeficientes\n",
-    "    COEFF = matrix.flatten('C')                                                                             # Vector de coeficientes\n",
+    "    matrix = np.genfromtxt(file, usecols=range(3), dtype=np.float128, skip_header=n+2, max_rows=4)           # Matriz de coeficientes\n",
+    "    COEFF = matrix.flatten('C')                                                                              # Vector de coeficientes\n",
     "    \n",
     "    out.write(\"UTC_mid = \" + str(UTC) + \"\\n\")\n",
     "    out.write(\"T[MJD]    P[ms]    delta_T[min]\")\n",
@@ -260,7 +259,7 @@
     "        P_array.append(P_ms)\n",
     "        T_array.append(T)\n",
     "        \n",
-    "#        out.write(str(T) + \" \" + str(P_ms) + \" \" + str(delta_T * 60. * 24.))\n",
+    "        out.write(str(T) + \" \" + str(P_ms) + \" \" + str(delta_T * 60. * 24.))\n",
     "#        print((str(T) + \" \" + str(P_ms) + \" \" + str(delta_T * 60. * 24.)))\n",
     "    \n",
     "        T += P_mjd                           # al punto T en que estábamos parades le sumamos el período P\n",
@@ -271,27 +270,8 @@
     "    \n",
     "out.close()\n",
     "\n",
-    "with open('periods.npy', 'wb') as outnp:\n",
+    "with open('periods.npy', 'wb') as outnp:     # guardamos el vector de períodos en un archivo .npy\n",
     "    np.save(outnp, P_array)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "89.407590763041582614\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('periods.npy', 'rb') as f:\n",
-    "    a = np.load(f)\n",
-    "    print(a[-1])"
    ]
   },
   {
@@ -343,32 +323,6 @@
     "#plt.savefig(file + '.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58924.541666666666668\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(T_array[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
