--- a/period.ipynb
+++ b/period.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,8 +58,25 @@
     "    \n",
     "    DT = (T - TMID) * 1440.\n",
     "    \n",
-    "    FREQ = F0 + (1/60.) * COEFF[1] + 2*DT*COEFF[2] + 3*(DT**2)*COEFF[3] + 4*(DT**3)*COEFF[4] + 5*(DT**4)*COEFF[5] + 6*(DT**5)*COEFF[6] + 7*(DT**6)*COEFF[7] + 8*(DT**7)*COEFF[8] + 9*(DT**8)*COEFF[9] + 10*(DT**9)*COEFF[10] + 11*(DT**10)*COEFF[11]\n",
+    "    FREQ = F0 + (1/60.) * ( COEFF[1] + 2*DT*COEFF[2] + 3*(DT**2)*COEFF[3] + 4*(DT**3)*COEFF[4] + 5*(DT**4)*COEFF[5] + 6*(DT**5)*COEFF[6] + 7*(DT**6)*COEFF[7] + 8*(DT**7)*COEFF[8] + 9*(DT**8)*COEFF[9] + 10*(DT**9)*COEFF[10] + 11*(DT**10)*COEFF[11] )\n",
     "    \n",
+    "    return 1/FREQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def PERIOD2(T, F0, COEFF, TMID):\n",
+    "    \n",
+    "    DT = (T - TMID) * 1440.\n",
+    "    \n",
+    "    FREQ = (1/60.) * ( 11*(DT**10)*COEFF[11] + 10*(DT**9)*COEFF[10] + 9*(DT**8)*COEFF[9] + 8*(DT**7)*COEFF[8] + 7*(DT**6)*COEFF[7] + 6*(DT**5)*COEFF[6] + 5*(DT**4)*COEFF[5] + 4*(DT**3)*COEFF[4] + 3*(DT**2)*COEFF[3] + 2*DT*COEFF[2] + COEFF[1] ) + F0\n",
+    "        \n",
     "    return 1/FREQ"
    ]
   },
