--- a/period-3.ipynb
+++ b/period-3.ipynb
@@ -23,11 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import period\n",
+    "from period import findP\n",
     "import glob                         # para hacer listas de archivos"
    ]
   },
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,13 +54,13 @@
     }
    ],
    "source": [
-    "file = glob.glob('*.polycos')[0]      # buscamos el archivo .polycos\n",
-    "print(file)"
+    "polycos = glob.glob('*.polycos')[0]      # buscamos el archivo .polycos\n",
+    "print(polycos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +74,7 @@
    "source": [
     "T = 58924.65583333330\n",
     "\n",
-    "P_ms = period.findP(file, T)\n",
+    "P_ms = findP(polycos, T)\n",
     "\n",
     "print(P_ms)"
    ]
